Restore java implementation for more porting
